Fix uneven .items start

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,7 @@ body {
   color: black;
   border-radius: 7px;
   box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.25);
-  padding: 7px 10px;
+  padding: 0px 10px 1px 10px;
   
   
   // padding-bottom: 50px;
@@ -93,44 +93,13 @@ body {
 }
 
 .column-header {
-  font-size: 25px;
+  font-size: 23px;
   color: black;
-  padding-top: 0px;
-  padding-bottom: 8px;
+  padding-top: 9px;
+  padding-bottom: 9px;
 
   span {
     font-size: 15px;
-  }
-}
-
-.column-header-descriptor {
-  font-size: 11.5px;
-  color: black;
-  padding-bottom: 10px;
-  font-style: italic;
-  font-weight: lighter;
-  margin-top: -3px; 
-}
-
-@media (max-width: 1155px) {
-  .column-header {
-    font-size: 17px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-
-    span {
-      font-size: 10px
-    }
-  }
-
-  .column-header-descriptor {
-    display: none;
-  }
-}
-
-@media (max-width: 750px) {
-  .column-header {
-    font-size: 14px;
   }
 }
 
@@ -187,8 +156,7 @@ body {
 }
 
 .items {
-  max-height: calc(77vh - 65px);
-  //min-height: 200px;
+  max-height: calc(77vh - 55px);
   height: fit-content;
   border-radius: $border-radius;
   overflow-y: auto;
